<resources>
    <string name="app_name">Alarm</string>

    <string name="alarm_title">Alarm</string>
    <string name="alarm_item_empty_time">--:--</string>
    <string name="alarm_add">Add an alarm</string>

    <string name="repeat">Repeat</string>
    <string name="save">Save</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibration</string>

    <string name="alarm_detail_add_title">Add alarm</string>
    <string name="alarm_detail_edit_title">Edit alarm</string>
    <string name="alarm_detail_select_sound">Select sound</string>
    <string name="alarm_detail_sound_name_default">Default</string>

    <string name="sleep_schedule">Sleep Schedule</string>
    <string name="wake_up">Wake up</string>
    <string name="week_days">Week days</string>

    <string name="sleep_schedule_hr">%d h</string>
    <string name="sleep_schedule_min">%d m</string>
    <string name="bedtime">BEDTIME</string>
    <string name="label">Label</string>
    <string name="pencil_hint" translatable="false">✎...</string>

    <string name="cancel">Cancel</string>
    <string name="alarm_delete">Delete alarm</string>
</resources>